# RaylibPlatformer

./: .gitignore  CMakeLists.txt  build.zig
include/: objectPool.h  physics.h  player.h  render.h
src/: main.c  objectPool.c  player.c  render.c
